--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>gee-dao</module>
         <module>gee-service</module>
         <module>gee-web</module>
+        <module>gee-manager</module>
     </modules>
     <packaging>pom</packaging>
     <name>gee-parent</name>
@@ -36,7 +37,7 @@
         <redisson.version>3.8.2</redisson.version>
         <mybatis.plus.version>3.1.2</mybatis.plus.version>
         <swagger.version>2.9.2</swagger.version>
-        <swagger.ui.layer.version>1.1.3</swagger.ui.layer.version>
+
     </properties>
     <!-- 依赖声明 -->
     <dependencyManagement>
@@ -87,6 +88,12 @@ spring-boot-dependencies一样之地替换的版本；
             <dependency>
                 <groupId>com.gld.gee</groupId>
                 <artifactId>gee-service</artifactId>
+                <version>${project.gld.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.gld.gee</groupId>
+                <artifactId>gee-manager</artifactId>
                 <version>${project.gld.version}</version>
             </dependency>
 
@@ -168,12 +175,6 @@ spring-boot-dependencies一样之地替换的版本；
                 <artifactId>springfox-swagger-ui</artifactId>
                 <version>${swagger.version}</version>
             </dependency>
-            <dependency>
-                <groupId>com.github.caspar-chen</groupId>
-                <artifactId>swagger-ui-layer</artifactId>
-                <version>${swagger.ui.layer.versio}</version>
-            </dependency>
-
 
         </dependencies>
 
